fix: Preload images on Hero component to avoid flickering on load

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -3,7 +3,7 @@
 }
 
 .slogan-home {
-	padding: 25px 0;
+	padding: 75px 0;
 }
 
 .slogan-home__left {
